--- a/app/cockpit/webapp/view/Cockpit.view.xml
+++ b/app/cockpit/webapp/view/Cockpit.view.xml
@@ -1,6 +1,63 @@
-<mvc:View controllerName="comp.container.com.cockpit.controller.Cockpit"
+<mvc:View
+    xmlns:core="sap.ui.core"
+    xmlns:tnt="sap.tnt"
+    controllerName="comp.container.com.cockpit.controller.Cockpit"
     xmlns:mvc="sap.ui.core.mvc"
-    xmlns="sap.m">
-    <Page id="page" title="{i18n>title}">
-    </Page>
+    xmlns="sap.m"
+>
+    <HBox
+        id="mainHBox"
+        width="100%"
+        height="100%"
+    >
+        <VBox
+            id="mainVBox"
+            renderType="Bare"
+            alignItems="Start"
+            height="100%"
+        >
+            <HBox justifyContent="End" width="100%" backgroundDesign="Solid" class="sapTnt">
+                <Button
+                    id="toggleExpandButton"
+                    icon="sap-icon://open-command-field"
+                    press="onToggleExpand"
+                    type="Transparent"
+                />
+            </HBox>
+
+            <tnt:SideNavigation
+                id="sideNavigation"
+                expanded="false"
+                itemSelect="onNavItemSelect"
+            >
+                <tnt:NavigationList id="mainNavigationList">
+                    <tnt:NavigationListItem
+                        id="navHome"
+                        text="Home"
+                        icon="sap-icon://home"
+                        key="homeKey"
+                    />
+                    <tnt:NavigationListItem
+                        id="navProdutos"
+                        text="Produtos"
+                        icon="sap-icon://product"
+                        key="produtosKey"
+                    />
+                    <tnt:NavigationListItem
+                        id="navClientes"
+                        text="Clientes"
+                        icon="sap-icon://customer"
+                        key="clientesKey"
+                    />
+                </tnt:NavigationList>
+            </tnt:SideNavigation>
+        </VBox>
+
+        <VBox
+            id="contentVBox"
+            renderType="Bare"
+            alignItems="Stretch"
+            width="100%"
+            height="100%" />
+    </HBox>
 </mvc:View>
