Enhance side navigation functionality: initialize router in onInit, update route matching, and improve side navigation item selection

--- a/app/cockpit/webapp/view/App.view.xml
+++ b/app/cockpit/webapp/view/App.view.xml
@@ -13,6 +13,7 @@
             <tnt:SideNavigation id="idSideNavigation">
                 <tnt:item>
                     <tnt:NavigationList
+                        id="idSideNavigationList"
                         items="{ path: 'sideNavigation>/navigationList' }"
                         itemSelect="onSideNavigationItemSelect"
                     >
