Update side navigation configuration: set 'selectable' property for Clientes and Produtos items

--- a/app/cockpit/webapp/view/App.view.xml
+++ b/app/cockpit/webapp/view/App.view.xml
@@ -26,6 +26,7 @@
                                 icon="{sideNavigation>icon}"
                                 key="{sideNavigation>key}"
                                 expanded="{sideNavigation>expanded}"
+                                selectable="{sideNavigation>selectable}"
                                 items="{sideNavigation>items}"
                             >
                                 <tnt:items>
